# portfolio-source-collector

./: .gitignore  README.md  TODO.md  debug_yahoo.py  pyproject.toml
config/: .env.example  config.example.yaml  config.yaml
scripts/: README.md
src/portfolio_source_collector/: __init__.py
src/portfolio_source_collector/adapters/: __init__.py  base.py  binance.py  bybit.py  interactive_brokers.py  tinkoff.py
src/portfolio_source_collector/cli/: main.py
src/portfolio_source_collector/core/: __init__.py  config.py  errors.py  http.py  logging.py
src/portfolio_source_collector/models/: __init__.py  entities.py
src/portfolio_source_collector/services/: __init__.py  balance_service.py  price_service.py
src/portfolio_source_collector/utils/: __init__.py  currency.py
tests/: conftest.py
tests/fixtures/: README.md
tests/unit/: test_balance_service.py
tests/unit/adapters/: test_binance_adapter.py  test_bybit_adapter.py  test_ibkr_adapter.py  test_tinkoff_adapter.py
tests/unit/services/: test_price_service.py
